feat: complete k-means model selection

--- a/02_cvpr_2018/04_clustering_pipeline.ipynb
+++ b/02_cvpr_2018/04_clustering_pipeline.ipynb
@@ -26,6 +26,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook, we put together a pipeline to cluster papers based on the functionality of previous notebooks. This pipeline is parametrised. The objective is to apply model selection to select the best value of the hyperparameters. Model selection is based on grid search. However, given the high number of hyperparameter the model selection process is iterative and from coarse to fine: we start with a coarse grid and focus on search on promising areas of the hyperparameter space. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -183,7 +197,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## K-means model selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Applying model selection to k-means. Starting with a coarse grid given the number of hyparameters. I will refine by exploring the hyperpameters space at increasingly lower resolution levels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pipeline_kmeans(input_data):\n",
+    "            df = input_data[0]\n",
+    "            max_df = input_data[1]\n",
+    "            min_df = input_data[2]\n",
+    "            n_components = input_data[3]\n",
+    "            k = input_data[4]\n",
+    "\n",
+    "            X_freq = build_bag_of_words(df, max_df = max_df, min_df = min_df)\n",
+    "            X_lsa = apply_lsa(X_freq, n_components = n_components)\n",
+    "            X_embedded = apply_dimensionality_reduction(X_lsa)\n",
+    "            kmeans, shil_kmeans = kmeans_clustering(X_embedded, k = k)\n",
+    "            return [shil_kmeans, kmeans, max_df, min_df, n_components, k, X_embedded]"
    ]
   },
   {
@@ -201,18 +242,6 @@
     "    if not os.path.exists(output_file):\n",
     "        # Pipeline initialisation\n",
     "        df = get_papers()\n",
-    "        def pipeline(input_data):\n",
-    "            df = input_data[0]\n",
-    "            max_df = input_data[1]\n",
-    "            min_df = input_data[2]\n",
-    "            n_components = input_data[3]\n",
-    "            k = input_data[4]\n",
-    "\n",
-    "            X_freq = build_bag_of_words(df, max_df = max_df, min_df = min_df)\n",
-    "            X_lsa = apply_lsa(X_freq, n_components = n_components)\n",
-    "            X_embedded = apply_dimensionality_reduction(X_lsa)\n",
-    "            kmeans, shil_kmeans = kmeans_clustering(X_embedded, k = k)\n",
-    "            return [shil_kmeans, kmeans, max_df, min_df, n_components, k]\n",
     "        \n",
     "        # Building the grid search space\n",
     "        grid_search = [(df, max_df, min_df, n_components, k) \n",
@@ -222,7 +251,7 @@
     "                         for k in k_values]\n",
     "\n",
     "        # Running the pipeline for all the elements in the grid search space\n",
-    "        results = Parallel(n_jobs=n_jobs)(delayed(pipeline)(gs) for gs in tqdm(grid_search))\n",
+    "        results = Parallel(n_jobs=n_jobs)(delayed(pipeline_kmeans)(gs) for gs in tqdm(grid_search))\n",
     "\n",
     "        # Processing the results data\n",
     "        results_df = pd.DataFrame([], columns = ['shil', 'max_df', 'min_df', 'n_components', 'k'])\n",
@@ -299,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_df_values = np.arange(0.5, 0.7, 0.05)\n",
+    "max_df_values = np.arange(0.45, 0.75, 0.05)\n",
     "min_df_values = np.arange(0.05, 0.15, 0.02)\n",
     "n_components_values = range(21, 32, 2)\n",
     "k_values = range(22, 32, 2)\n",
@@ -309,6 +338,69 @@
     "                       n_components_values, \n",
     "                       k_values,\n",
     "                       'checkpoints/fine.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "max_df_values = np.arange(0.40, 0.78, 0.02)\n",
+    "min_df_values = np.arange(0.05, 0.1, 0.01)\n",
+    "n_components_values = range(21, 28, 2)\n",
+    "k_values = range(26, 30, 1)\n",
+    "\n",
+    "grid_search_kmeans(max_df_values, \n",
+    "                       min_df_values, \n",
+    "                       n_components_values, \n",
+    "                       k_values,\n",
+    "                       'checkpoints/finer.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finer_df = pd.read_csv('checkpoints/finer.csv', index_col=[0])\n",
+    "finer_df = finer_df.sort_values(by='shil', ascending=False)\n",
+    "finer_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = get_papers()\n",
+    "[\n",
+    "    _, \n",
+    "    kmeans, \n",
+    "    _, \n",
+    "    _, \n",
+    "    _, \n",
+    "    _, \n",
+    "    X_embedded\n",
+    "] = pipeline_kmeans((df, \n",
+    "                finer_df.max_df.values[0], \n",
+    "                finer_df.min_df.values[0], \n",
+    "                int(finer_df.n_components.values[0]), \n",
+    "                int(finer_df.k.values[0])))\n",
+    "plot_kmeans(X_embedded, kmeans)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see clear and separate clusters in the outer region of the papers space. The central part of that space is composed of a blob of papers which are just segmentated into a series of smaller blobs by k-means. Furthermore, there are several papers that are closer to papers in other clusters than to their corresponding centroid (e.g. cluster 15). That is the reason why the shilouette score is not that high. \n",
+    "\n",
+    "In the next section we apply the same process for DBSCAN. We expect DBSCAN to not assign some papers to clusters. More specifically, those papers that are in the border between clusters and may not clearly classified as belonging to one topic or another. We are also expecting DBSCAN to deal better with the central blob of papers. "
    ]
   },
   {
