--- a/02_cvpr_2018/04_clustering_pipeline.ipynb
+++ b/02_cvpr_2018/04_clustering_pipeline.ipynb
@@ -295,7 +295,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# K-means: coarse model selection\n",
     "max_df_values = np.arange(0.7, 1, 0.1)\n",
     "min_df_values = np.arange(0, 0.3, 0.1)\n",
     "n_components_values = range(5, 50, 10)\n",
@@ -401,6 +400,131 @@
     "We can see clear and separate clusters in the outer region of the papers space. The central part of that space is composed of a blob of papers which are just segmentated into a series of smaller blobs by k-means. Furthermore, there are several papers that are closer to papers in other clusters than to their corresponding centroid (e.g. cluster 15). That is the reason why the shilouette score is not that high. \n",
     "\n",
     "In the next section we apply the same process for DBSCAN. We expect DBSCAN to not assign some papers to clusters. More specifically, those papers that are in the border between clusters and may not clearly classified as belonging to one topic or another. We are also expecting DBSCAN to deal better with the central blob of papers. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DBSCAN model selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pipeline_dbscan(input_data):\n",
+    "            df = input_data[0]\n",
+    "            max_df = input_data[1]\n",
+    "            min_df = input_data[2]\n",
+    "            n_components = input_data[3]\n",
+    "            eps = input_data[4]\n",
+    "            min_samples = input_data[5]\n",
+    "\n",
+    "            X_freq = build_bag_of_words(df, max_df = max_df, min_df = min_df)\n",
+    "            X_lsa = apply_lsa(X_freq, n_components = n_components)\n",
+    "            X_embedded = apply_dimensionality_reduction(X_lsa)\n",
+    "            dbscan, shil = dba_clustering(X_embedded, eps = eps, min_samples = min_samples)\n",
+    "            return [shil, dbscan, max_df, min_df, n_components, eps, min_samples, X_embedded]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grid_search_dbscan(max_df_values, \n",
+    "                       min_df_values, \n",
+    "                       n_components_values, \n",
+    "                       eps_values,\n",
+    "                       min_samples_values,\n",
+    "                       output_file,\n",
+    "                       n_jobs = 8):\n",
+    "    if not os.path.exists(output_file):\n",
+    "        # Pipeline initialisation\n",
+    "        df = get_papers()\n",
+    "        \n",
+    "        # Building the grid search space\n",
+    "        grid_search = [(df, max_df, min_df, n_components, eps, min_samples) \n",
+    "                         for max_df in max_df_values\n",
+    "                         for min_df in min_df_values\n",
+    "                         for n_components in n_components_values\n",
+    "                         for eps in eps_values\n",
+    "                         for min_samples in min_samples_values]\n",
+    "\n",
+    "        # Running the pipeline for all the elements in the grid search space\n",
+    "        results = Parallel(n_jobs=n_jobs)(delayed(pipeline_dbscan)(gs) for gs in tqdm(grid_search))\n",
+    "\n",
+    "        # Processing the results data\n",
+    "        results_df = pd.DataFrame([], columns = ['shil', 'max_df', 'min_df', 'n_components', 'eps', 'min_samples'])\n",
+    "        for r in results:\n",
+    "            results_df.loc[len(results_df) + 1, :] = [r[0], r[2], r[3], r[4], r[5], r[6]]\n",
+    "        for c in results_df.columns:\n",
+    "            results_df[c] = results_df[c].astype(float)\n",
+    "        results_df.to_csv(output_file)\n",
+    "    else:\n",
+    "        results_df = pd.read_csv(output_file, index_col=[0])\n",
+    "\n",
+    "    # Plotting the results\n",
+    "    fig, ax = plt.subplots(3,2)\n",
+    "    r = 0\n",
+    "    c = 0\n",
+    "    for col in results_df.columns[1:]:\n",
+    "        averages = results_df[[col, 'shil']].groupby(col).mean().sort_index()\n",
+    "        stds = results_df[[col, 'shil']].groupby(col).std().sort_index()\n",
+    "\n",
+    "        ax[r, c].plot(averages.index.values, averages.values)\n",
+    "        ax[r, c].fill_between(averages.index.values, \n",
+    "                        averages.values.flatten() - stds.values.flatten(),\n",
+    "                        averages.values.flatten() + stds.values.flatten(), \n",
+    "                        alpha = 0.5)\n",
+    "        ax[r, c].grid(True)\n",
+    "        ax[r, c].set_xlabel(col)\n",
+    "        ax[r, c].set_ylabel('shil')\n",
+    "\n",
+    "        c = c + 1\n",
+    "        if c > 1:\n",
+    "            c = 0\n",
+    "            r = r + 1\n",
+    "    fig.set_figwidth(16)\n",
+    "    fig.set_figheight(8)\n",
+    "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "max_df_values = np.arange(0.4, 1.2, 0.2)\n",
+    "min_df_values = np.arange(0, 0.3, 0.1)\n",
+    "n_components_values = range(1, 51, 10)\n",
+    "eps_values = np.arange(0.1, 11.1, 2)\n",
+    "min_samples_values = range(5, 55, 10)\n",
+    "\n",
+    "grid_search_dbscan(max_df_values, \n",
+    "                   min_df_values, \n",
+    "                   n_components_values, \n",
+    "                   eps_values,\n",
+    "                   min_samples_values,\n",
+    "                   'checkpoints/dbscan_coarse.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbscan_df = pd.read_csv('checkpoints/dbscan_coarse.csv', index_col=[0])\n",
+    "dbscan_df = dbscan_df.sort_values(by='shil', ascending=False)\n",
+    "dbscan_df.head()"
    ]
   },
   {
